<resources>
    <string name="app_name">SDA Assign4 2020 Bianca Catalunha</string>

    <!-- Labels -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="id">ID</string>
    <string name="clear_data">Clear data</string>
    <string name="upload_data">Upload data</string>
    <string name="profile_info">Profile info</string>
    <string name="reset">Reset</string>
    <string name="admin">Admin</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="password">Password</string>
    <string name="check_out">Check Out</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="confirm">Confirm</string>


    <!-- Tab names -->
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Books</string>
    <string name="tab_text_3">Settings</string>

    <!-- User messages -->
    <string name="email_changed_successfully">Email changed successfully</string>
    <string name="name_changed_successfully">Name changed successfully</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="id_cannot_be_changed">ID cannot be changed</string>
    <string name="reset_dialog_message">Are you sure you want to reset your profile information?</string>
    <string name="welcome_message">"Welcome to DCU's online book reservation system. \n\nPlease log in to access. \n\nBook drop-off opens from 9am to 14:00 every day."</string>
    <string name="images_uploaded_successfully">Images uploaded successfully</string>
    <string name="images_upload_error">Images were not uploaded</string>
    <string name="signed_out">Signed Out</string>
    <string name="wrong_password">Wrong password</string>
    <string name="reservation_intro">Please select available dates to reserve </string>
    <string name="reservation_intro_with_user_name">, please select available dates to reserve </string>
    <string name="picked_date">You picked the following date: </string>
    <string name="reservation_summary">Press confirm to reserve. \nPlease pick up the book on the selected date or your reservation will be cancelled. \nHappy reading</string>

    <!-- Summary -->
    <string name="clear_data_summary">Clears all preferences on this screen</string>
    <string name="admin_summary">Administrator access only</string>

    <!-- Auth -->
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="google_status_fmt">Google User: %s</string>

    <!-- Hints -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <!-- Passwords -->
    <string name="admin_password">firebaseRules</string>

    <string name="book_storage_folder_name">book_covers</string>
    <string name="book_name_pattern">sku1000</string>
    <string name="jpg_extension">.jpg</string>
    <string name="books">books</string>

    <!-- Descriptions -->
    <string name="images_desc">Book Image</string>
    <string name="plc_author">Edgar Rice Burroughs</string>
    <string name="plc_title">Tarzan and the Golden Lion</string>
    <string name="border">border item</string>

    <!-- Books -->
    <string-array name="book_titles">
        <item>Tarzan and the Golden Lion</item>
        <item>The Murder on the Links</item>
        <item>The World Crisis</item>
        <item>Tulips and Chimneys</item>
        <item>New Hampshire</item>
        <item>The Prophet</item>
        <item>Antic Hay</item>
        <item>Kangaroo</item>
        <item>The Prospects of Industrial Civilization</item>
        <item>Rootabaga Pigeons</item>
        <item>A Son at the Front</item>
        <item>The Inimitable Jeeves</item>
        <item>Leave it to Psmith</item>
        <item>Jacobs Room</item>
    </string-array>

    <string-array name="book_authors">
        <item>Edgar Rice Burroughs</item>
        <item>Agatha Christie</item>
        <item>Winston S. Churchill</item>
        <item>E.e. cummings</item>
        <item>Robert Frost</item>
        <item>Kahlil Gibran</item>
        <item>Aldous Huxley</item>
        <item>D.H. Lawrence</item>
        <item>Bertrand and Dora Russell</item>
        <item>Carl Sandberg</item>
        <item>Edith Wharton</item>
        <item>P.G. Wodehouse</item>
        <item>P.G. Wodehouse</item>
        <item>Viginia Woolf</item>
    </string-array>

</resources>
